# platform.core.account.account-parser

./: CMakeLists.txt  account-parser.pc.in
packaging/: account-parser.spec
src/: account-dlog.h  account.c
